fix nav alignment

--- a/components/Nav.scss
+++ b/components/Nav.scss
@@ -1,60 +1,46 @@
-nav {
-  margin-bottom: 5rem;
-  margin-block-end: 5rem;
+.main-nav {
+  margin-bottom: 2rem;
+  text-align: center;
 }
 
-nav > ul {
+.main-nav > ul {
   list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
+  display: inline-flex;
   padding: 0;
-}
-
-nav > ul a {
-  text-decoration: none;
-}
-
-nav > ul a:hover {
-  text-decoration: underline;
-}
-
-nav > ul a:active {
-  color: black;
-}
-
-nav > ul a:visited {
-  color: purple;
-}
-
-nav > ul li {
+  margin: 0;
   font-weight: 600;
   text-transform: lowercase;
   list-style: none;
 }
 
+.main-nav > ul li {
+  padding: 0 1rem;
+}
+
+.main-nav > ul a {
+  text-decoration: none;
+  padding: 0 1rem 0 0;
+}
+
+.main-nav > ul a:hover {
+  text-decoration: underline;
+}
+
+.main-nav > ul a:active {
+  color: black;
+}
+
+.main-nav > ul a:visited {
+  color: purple;
+}
+
 @media (min-width: 700px) {
-  //   .nav--container {
-  //     display: grid;
-  //     grid-template-columns: 2fr max-content;
-  //     line-height: 1.563;
-  //   }
+  .main-nav {
+    margin-bottom: 5rem;
+    text-align: revert;
+  }
 
-  //   nav {
-  //     grid-column: 2 / -1;
-  //     padding: 1rem;
-  //     margin-bottom: 2rem;
-  //     margin-block-end: 2rem;
-  //   }
-
-  //   nav > ul {
-  //     writing-mode: vertical-lr;
-  //     display: grid;
-  //     grid-template-columns: subgrid;
-  //   }
-
-  nav > ul li {
+  .main-nav > ul {
     font-size: 1.563rem;
   }
 }
